--- a/api/composer.json
+++ b/api/composer.json
@@ -13,6 +13,10 @@
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
+        "symfony/debug-pack": "^1.0",
+        "symfony/maker-bundle": "^1.14",
+        "symfony/profiler-pack": "^1.0",
+        "symfony/test-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
